# 0.00.65 (54315) Jul 20, 2011
Micro tab: Added icons to the bar chart
Micro tab: Color Na+ and Cl- bars to match with atom colors, and toggle bar colors when "show charge" is toggled
Micro tab: Added Na+ and Cl- bars to the bar chart
Micro tab: Fixed: sucrose molecule disassociates
Micro tab: Performance improvements for sucrose creation
Micro tab: Fixed sucrose to use the same model and view as other crystals, also fixes the size of sucrose molecule atoms
Micro tab: Made calcium a darker shade of green
Micro tab: Moved oxygen in NO3 closer to the central nitrogen so they will look more bonded
Micro tab: Added play/pause/step buttons
Micro tab: Introduced new class Compound for nitrates
Micro tab: Fixed: The nitrate ion should turn blue (not gray) when "show charge" is checked
# 0.00.64 (54187) Jul 18, 2011
Micro tab: Fixed: Sodium nitrate sodium ions don't move
Micro tab: Added checkbox to toggle whether the color shown is based on charge or atom identity
Micro tab: Switched to atom colors
Micro tab: Only dissolve salt if below saturation point
Micro tab: Components move down when water evaporates
Micro tab: Components move down when water flows out through the faucet
Micro tab: Added type parameters to OpenSite
# 0.00.63 (54143) Jul 15, 2011
Micro tab: Added calcium chloride lattice
# 0.00.62 (54111) Jul 15, 2011
Micro tab: Nitrate group remains together when sodium nitrate dissolves
Micro tab: Fixed the angle and distances for oxygen in sodium nitrate NO3 group
Micro tab: Simplified micro shaker model and started adding sodium nitrate
# 0.00.61 (54021) Jul 12, 2011
Micro tab: Fixed: Sucrose molecules don't have the right size
Micro tab: Removed soluble salts model and replaced with new implementation
Micro tab: Added random walks for particles
# 0.00.60 (53874) Jul 8, 2011
Micro tab: Increased the size of the insets around the periodic table
Micro tab: Rewriting model (in progress)
Micro tab: Added beaker labels and tick marks
# 0.00.59 (53687) Jul 2, 2011